--- a/kafka.streaming/pom.xml
+++ b/kafka.streaming/pom.xml
@@ -20,13 +20,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>streaming</artifactId>
-        <groupId>test</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>stream-multi-modules</artifactId>
+        <groupId>ua.org.kodaky.multi</groupId>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>kafka.streaming</artifactId>
+    <artifactId>streaming.kafka</artifactId>
     <packaging>jar</packaging>
 
     <name>Kafka Streams Quickstart :: Java</name>
