--- a/spark streaming/pom.xml
+++ b/spark streaming/pom.xml
@@ -4,22 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>test</groupId>
-    <artifactId>streaming</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <artifactId>stream-multi-modules</artifactId>
+        <groupId>ua.org.kodaky.multi</groupId>
+        <version>1.0</version>
+    </parent>
 
-    <properties>
-            <spark.version>2.4.0</spark.version>
-    </properties>
+    <groupId>ua.org.kodaky.spark</groupId>
+    <artifactId>streaming.spark</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
 
 <dependencies>
-    <!--<dependency>-->
-        <!--<groupId>com.mapr.streams</groupId>-->
-        <!--<artifactId>mapr-streams</artifactId>-->
-        <!--<version>6.1.0-mapr</version>-->
-    <!--</dependency>-->
     <dependency>
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-sql_2.11</artifactId>
