--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 		 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.org.kodaky.multi</groupId>
-    <artifactId>stream-multi-modules</artifactId>
+    <groupId>com.dyptan</groupId>
+    <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
 
