--- a/reactive.web/pom.xml
+++ b/reactive.web/pom.xml
@@ -22,12 +22,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.org.kodaky.reactiveweb</groupId>
-    <artifactId>MongoDBReactiveWebClientSSE</artifactId>
+    <groupId>com.dyptan</groupId>
+    <artifactId>web</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>MongoDBReactiveWebClientSSE</name>
+    <name>web</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -44,7 +44,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>ua.org.kodaky.spark</groupId>
+            <groupId>com.dyptan</groupId>
             <artifactId>streaming.spark</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
