read Spark properties from file

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
 
     <dependencies>
         <!-- Stream parent dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!--<build>-->
