--- a/streaming/pom.xml
+++ b/streaming/pom.xml
@@ -17,13 +17,20 @@
     <version>1.1-SNAPSHOT</version>
 
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <spark.version>2.4.0</spark.version>
+    </properties>
+
     <dependencies>
+
 
         <!--Tests deps-->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -62,12 +69,5 @@
         </dependency>
     </dependencies>
 
-    <!--<repositories>-->
-    <!--<repository> <id>mapr-releases</id>-->
-    <!--<url>http://repository.mapr.com/maven/</url>-->
-    <!--<snapshots><enabled>true</enabled></snapshots>-->
-    <!--<releases><enabled>true</enabled></releases>-->
-    <!--</repository>-->
-    <!--</repositories>-->
 
 </project>
