--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,26 +15,24 @@
         <version>1.0</version>
     </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 
-    <!--<repositories>-->
-    <!--<repository>-->
-    <!--<id>central</id>-->
-    <!--<url>http://central.maven.org/maven2</url>-->
-    <!--</repository>-->
-    <!--</repositories>-->
-
-
-    <dependencies>
+     <dependencies>
 
         <dependency>
             <groupId>com.dyptan</groupId>
             <artifactId>streaming</artifactId>
             <version>1.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -47,6 +45,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -72,12 +71,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.data</groupId>-->
-            <!--<artifactId>spring-data-mongodb</artifactId>-->
-            <!--<version>2.1.0.M1</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -115,13 +108,6 @@
             <optional>true</optional>
         </dependency>
 
-
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
-        <!--</dependency>-->
-
-
         <dependency>
             <groupId>io.reactivex</groupId>
             <artifactId>rxjava</artifactId>
@@ -137,82 +123,7 @@
             <artifactId>rxjava</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.jetbrains</groupId>-->
-            <!--<artifactId>annotations</artifactId>-->
-            <!--<version>LATEST</version>-->
-        <!--</dependency>-->
-
 
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
-            </plugin>
-        </plugins>
-    </build>
-
-    <!--<build>-->
-        <!--&lt;!&ndash;<finalName>portfolio</finalName>&ndash;&gt;-->
-        <!--<pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;-->
-            <!--<plugins>-->
-                <!--<plugin>-->
-                    <!--<groupId>org.springframework.boot</groupId>-->
-                    <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-                <!--</plugin>-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-clean-plugin</artifactId>-->
-                    <!--<version>3.0.0</version>-->
-                <!--</plugin>-->
-                <!--&lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-resources-plugin</artifactId>-->
-                    <!--<version>3.0.2</version>-->
-                <!--</plugin>-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                    <!--<version>3.8.0</version>-->
-                <!--</plugin>-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                    <!--<version>2.20.1</version>-->
-                <!--</plugin>-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-war-plugin</artifactId>-->
-                    <!--<version>3.2.0</version>-->
-                <!--</plugin>-->
-                <!--<plugin>-->
-                    <!--<artifactId>maven-install-plugin</artifactId>-->
-                    <!--<version>2.5.2</version>-->
-                <!--</plugin>-->
-                <!--&lt;!&ndash;<plugin>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>maven-deploy-plugin</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>2.8.2</version>&ndash;&gt;-->
-                <!--&lt;!&ndash;</plugin>&ndash;&gt;-->
-                <!--&lt;!&ndash;<plugin>&ndash;&gt;-->
-                <!--&lt;!&ndash;<groupId>org.apache.tomcat.maven</groupId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<artifactId>tomcat7-maven-plugin</artifactId>&ndash;&gt;-->
-                <!--&lt;!&ndash;<version>2.2</version>&ndash;&gt;-->
-                <!--&lt;!&ndash;<configuration>&ndash;&gt;-->
-                <!--&lt;!&ndash;<url>http://localhost:8080/manager/text</url>&ndash;&gt;-->
-                <!--&lt;!&ndash;<server>TomcatServer</server>&ndash;&gt;-->
-                <!--&lt;!&ndash;<path>/</path>&ndash;&gt;-->
-                <!--&lt;!&ndash;</configuration>&ndash;&gt;-->
-                <!--&lt;!&ndash;</plugin>&ndash;&gt;-->
-            <!--</plugins>-->
-        <!--</pluginManagement>-->
-    <!--</build>-->
 </project>
