enabling streaming frontend

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.thymeleaf.suffix=.html
 
 logging.level.org.springframework=ERROR
 logging.level.com.dyptan=ERROR
+logging.level.org.apache=ERROR
+
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
