--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-elasticsearch.index=cars3
+elasticsearch.index=olx
+elasticsearch.type=cars
 elasticsearch.host=localhost
 elasticsearch.port=9200
 
