--- a/web/pom.xml
+++ b/web/pom.xml
@@ -35,7 +35,12 @@
             </exclusions>
         </dependency>
 
-        <dependency>
+         <dependency>
+             <groupId>org.springframework.boot</groupId>
+             <artifactId>spring-boot-starter-security</artifactId>
+         </dependency>
+
+         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
