--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -6,16 +6,19 @@ elasticsearch.port=9200
 server.port=8081
 
 spring.application.name=Bootstrap Spring Boot
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=ivan
 spring.datasource.password=ivan123
 spring.datasource.url=jdbc:postgresql://localhost:5432/dyptan
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 
 server.tomcat.additional-tld-skip-patterns=*.jar
 
@@ -24,8 +27,7 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 #spring.thymeleaf.mode=html
-
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=DEBUG
 logging.level.com.dyptan=ERROR
 logging.level.org.apache=ERROR
 
