--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-elasticsearch.index=olx
-elasticsearch.type=cars
-elasticsearch.host=localhost
-elasticsearch.port=9200
-
 server.port=8081
 
 spring.application.name=Bootstrap Spring Boot
@@ -27,8 +22,9 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 #spring.thymeleaf.mode=html
+
 logging.level.org.springframework=DEBUG
-logging.level.com.dyptan=ERROR
+logging.level.com.dyptan=DEBUG
 logging.level.org.apache=ERROR
 
 
@@ -36,3 +32,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.database=olx
+elasticsearch.index=olx
+elasticsearch.type=cars
+elasticsearch.host=localhost
+elasticsearch.port=9200
