--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 server.tomcat.additional-tld-skip-patterns=*.jar
 
@@ -26,7 +26,6 @@ spring.thymeleaf.suffix=.html
 logging.level.org.springframework=DEBUG
 logging.level.com.dyptan=DEBUG
 logging.level.org.apache=ERROR
-
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
