--- a/streaming/src/main/resources/trainer.properties
+++ b/streaming/src/main/resources/trainer.properties
@@ -1,5 +1,5 @@
 es.read.field.as.array.include=tags
-es.nodes=localhost
+es.nodes=server.kodaky.org.ua
 es.port=9200
 es.resource=olx/cars
 model.path=.trainedModel
