--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=Bootstrap Spring Boot
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=ivan
 spring.datasource.password=ivan123
-spring.datasource.url=jdbc:postgresql://server.kodaky.org.ua:5432/dyptan
+spring.datasource.url=jdbc:postgresql://localhost:5432/dyptan
 spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
+#spring.datasource.validationQuery=SELECT 1
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -26,7 +26,7 @@ spring.thymeleaf.suffix=.html
 logging.level.org.springframework=DEBUG
 logging.level.com.dyptan=DEBUG
 logging.level.org.apache=ERROR
-spring.data.mongodb.host=server.kodaky.org.ua
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.database=olx
