applying filters on stream

--- a/streaming/src/main/resources/streaming.properties
+++ b/streaming/src/main/resources/streaming.properties
@@ -1,6 +1,6 @@
 spark.master=local
-spark.mongodb.output.uri=mongodb://server.kodaky.org.ua/olx.cars
+spark.mongodb.output.uri=mongodb://localhost/olx.cars
 spark.driver.bindAddress=localhost
-source.kafka.bootstrap.server=server.kodaky.org.ua:9092
+source.kafka.bootstrap.server=localhost:9092
 source.kafka.topic=olx
 model.load.path=.trainedModel
