--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=Bootstrap Spring Boot
+#security.headers.frame=false
+#management.endpoints.web.cors.allowed-origins=*
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=ivan
@@ -23,7 +25,8 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.database=olx
+
 elasticsearch.index=olx
 elasticsearch.type=cars
-elasticsearch.host=server.kodaky.org.ua
+elasticsearch.host=localhost
 elasticsearch.port=9200
