--- a/streaming/src/main/resources/streaming.properties
+++ b/streaming/src/main/resources/streaming.properties
@@ -1,6 +1,6 @@
 spark.master=local
 spark.mongodb.output.uri=mongodb://localhost/olx.cars
 spark.driver.bindAddress=localhost
-source.kafka.bootstrap.server=localhost:9092
+source.kafka.bootstrap.server=172.19.0.3:9092
 source.kafka.topic=olx
 model.load.path=.trainedModel
