--- a/streaming/src/main/resources/trainer.properties
+++ b/streaming/src/main/resources/trainer.properties
@@ -1,5 +1,5 @@
 es.read.field.as.array.include=tags
-es.nodes=server.kodaky.org.ua
+es.nodes=localhost
 es.port=9200
-es.resource=olx/cars
+es.resource=olxua/cars
 model.path=.trainedModel
