--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=Bootstrap Spring Boot
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=ivan
 spring.datasource.password=ivan123
-spring.datasource.url=jdbc:postgresql://localhost:5432/dyptan
+spring.datasource.url=jdbc:postgresql://localhost:5432/ivan
 spring.datasource.testWhileIdle=true
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -25,8 +25,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.database=olx
-
-elasticsearch.index=olx
+elasticsearch.index=olxua
 elasticsearch.type=cars
 elasticsearch.host=localhost
 elasticsearch.port=9200
