--- a/streaming/src/main/resources/streaming.properties
+++ b/streaming/src/main/resources/streaming.properties
@@ -1,6 +1,7 @@
 spark.master=local
-spark.mongodb.output.uri=mongodb://localhost/olx.cars
+spark.mongodb.output.uri=mongodb://mongo/olx.cars
 spark.driver.bindAddress=localhost
-source.kafka.bootstrap.server=localhost:9092
+
+source.kafka.bootstrap.server=kafka:9092
 source.kafka.topic=olx
-model.load.path=.trainedModel
+model.load.path=/tmp/trainedModel
