--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=Bootstrap Spring Boot
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=ivan
 spring.datasource.password=ivan123
-spring.datasource.url=jdbc:postgresql://localhost:5432/ivan
+spring.datasource.url=jdbc:postgresql://db:5432/ivan
 spring.datasource.testWhileIdle=true
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -21,11 +21,12 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongo
 spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 spring.data.mongodb.database=olx
+
 elasticsearch.index=olxua
 elasticsearch.type=cars
-elasticsearch.host=localhost
+elasticsearch.host=elasticsearch
 elasticsearch.port=9200
