--- a/streaming/src/main/resources/trainer.properties
+++ b/streaming/src/main/resources/trainer.properties
@@ -1,5 +1,5 @@
 es.read.field.as.array.include=tags
-es.nodes=localhost
+es.nodes=elasticsearch
 es.port=9200
 es.resource=olxua/cars
-model.path=.trainedModel
+model.path=/tmp/trainedModel
