--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:8u111-jdk-alpine
+FROM openjdk:8-jre-slim
 VOLUME /tmp
 ADD target/web-1.0-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+EXPOSE 8080
