--- a/docker/elasticsearch-deployment.yaml
+++ b/docker/elasticsearch-deployment.yaml
@@ -18,6 +18,20 @@ spec:
       labels:
         io.kompose.service: elasticsearch
     spec:
+      initContainers:
+        # NOTE:
+        # This is to fix the permission on the volume
+        # By default elasticsearch container is not run as
+        # non root user.
+        # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_notes_for_production_use_and_defaults
+        - name: fix-the-volume-permission
+          image: busybox
+          command:
+          - sh
+          - -c
+          - chown -R 1000:1000 /usr/share/elasticsearch/data
+          securityContext:
+            privileged: true
       containers:
       - env:
         - name: discovery.type
