--- a/streaming/src/main/resources/streaming.properties
+++ b/streaming/src/main/resources/streaming.properties
@@ -4,4 +4,4 @@ spark.driver.bindAddress=localhost
 
 source.kafka.bootstrap.server=kafka:9092
 source.kafka.topic=olx
-model.load.path=/tmp/trainedModel
+model.load.path=streaming/trainedModel
