--- a/docker/web-deployment.yaml
+++ b/docker/web-deployment.yaml
@@ -1,3 +1,15 @@
+#---
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+#  name: model-claim
+#spec:
+#  accessModes:
+#    - ReadWriteOnce
+#  resources:
+#    requests:
+#      storage: 1Gi
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -24,12 +36,12 @@ spec:
         ports:
         - containerPort: 8080
         resources: {}
-        volumeMounts:
-        - mountPath: /tmp
-          name: model
+#        volumeMounts:
+#        - mountPath: /tmp
+#          name: model
       restartPolicy: Always
-      volumes:
-      - name: model
-        persistentVolumeClaim:
-          claimName: model
-status: {}
+#      volumes:
+#      - name: model
+#        persistentVolumeClaim:
+#          claimName: model-claim
+
