--- a/streaming/src/main/resources/trainer.properties
+++ b/streaming/src/main/resources/trainer.properties
@@ -2,4 +2,4 @@ es.read.field.as.array.include=tags
 es.nodes=elasticsearch
 es.port=9200
 es.resource=olxua/cars
-model.path=/tmp/trainedModel
+model.path=streaming/trainedModel
