--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -28,5 +28,7 @@ spring.data.mongodb.database=olx
 
 elasticsearch.index=olxua
 elasticsearch.type=cars
-elasticsearch.host=elasticsearch
-elasticsearch.port=9200
+elasticsearch.service.host=elasticsearch
+elasticsearch.service.port=9200
+
+management.endpoints.web.exposure.include=*
