--- a/docker/k8s/rsscollector-deployment.yaml
+++ b/docker/k8s/rsscollector-deployment.yaml
@@ -1,13 +1,16 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rsscollector
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: rsscollector
   template:
     metadata:
       labels:
-        io.kompose.service: rsscollector
+        name: rsscollector
     spec:
       containers:
       - image: diptan/rsscollector
