--- a/docker/k8s/db-deployment.yaml
+++ b/docker/k8s/db-deployment.yaml
@@ -1,21 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: db
+    name: db
   name: db
 spec:
   replicas: 1
-  strategy: {}
+  selector:
+    matchLabels:
+      name: db
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: db
+        name: db
     spec:
       containers:
       - env:
@@ -27,6 +24,5 @@ spec:
         name: db
         ports:
         - containerPort: 5432
-        resources: {}
       restartPolicy: Always
-status: {}
+
