--- a/docker/k8s/mongo-deployment.yaml
+++ b/docker/k8s/mongo-deployment.yaml
@@ -1,27 +1,22 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: mongo
+    name: mongo
   name: mongo
 spec:
   replicas: 1
-  strategy: {}
+  selector:
+    matchLabels:
+      name: mongo
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: mongo
+        name: mongo
     spec:
       containers:
       - image: diptan/mongo
         name: mongo
         ports:
         - containerPort: 27017
-        resources: {}
       restartPolicy: Always
-status: {}
