--- a/docker/k8s/mongo-service.yaml
+++ b/docker/k8s/mongo-service.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: mongo
+    name: mongo
   name: mongo
 spec:
   ports:
@@ -14,6 +10,6 @@ spec:
     port: 27017
     targetPort: 27017
   selector:
-    io.kompose.service: mongo
+    name: mongo
 status:
   loadBalancer: {}
