--- a/docker/k8s/web-deployment.yaml
+++ b/docker/k8s/web-deployment.yaml
@@ -1,47 +1,25 @@
-#---
-#apiVersion: v1
-#kind: PersistentVolumeClaim
-#metadata:
-#  name: model-claim
-#spec:
-#  accessModes:
-#    - ReadWriteOnce
-#  resources:
-#    requests:
-#      storage: 1Gi
----
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: web
+    name: web
   name: web
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: web
   strategy:
     type: Recreate
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: web
+        name: web
     spec:
       containers:
       - image: diptan/web:latest
         name: web
         ports:
         - containerPort: 8080
-        resources: {}
-#        volumeMounts:
-#        - mountPath: /tmp
-#          name: model
       restartPolicy: Always
-#      volumes:
-#      - name: model
-#        persistentVolumeClaim:
-#          claimName: model-claim
 
