--- a/docker/k8s/zookeeper-deployment.yaml
+++ b/docker/k8s/zookeeper-deployment.yaml
@@ -1,21 +1,18 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: zookeeper
+    name: zookeeper
   name: zookeeper
 spec:
   replicas: 1
-  strategy: {}
+  selector:
+    matchLabels:
+      name: zookeeper
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        io.kompose.service: zookeeper
+        name: zookeeper
     spec:
       containers:
       - env:
@@ -25,6 +22,4 @@ spec:
         name: zookeeper
         ports:
         - containerPort: 2181
-        resources: {}
       restartPolicy: Always
-status: {}
