--- a/docker/k8s/zookeeper-service.yaml
+++ b/docker/k8s/zookeeper-service.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.17.0 (a74acad)
-  creationTimestamp: null
   labels:
-    io.kompose.service: zookeeper
+    name: zookeeper
   name: zookeeper
 spec:
   ports:
@@ -14,6 +10,6 @@ spec:
     port: 2181
     targetPort: 2181
   selector:
-    io.kompose.service: zookeeper
+    name: zookeeper
 status:
   loadBalancer: {}
