--- a/deploy/k8s/web-service.yaml
+++ b/deploy/k8s/web-service.yaml
@@ -6,6 +6,7 @@ spec:
   ports:
   - port: 8080
     targetPort: 8080
+    nodePort: 30080
   selector:
     name: web
-  type: LoadBalancer
+  type: NodePort
