--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.1.15.RELEASE</version>
     </parent>
 
 
@@ -21,13 +21,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spark.version>2.4.4</spark.version>
-        <scala_ver>2.12</scala_ver>
     </properties>
 
     <modules>
         <module>web</module>
         <module>streamer</module>
+        <module>trainer</module>
     </modules>
 
 
