--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -17,25 +17,12 @@
     <version>1.1-SNAPSHOT</version>
 
 
+    <properties>
+        <spark.version>2.4.6</spark.version>
+        <scala_ver>2.11</scala_ver>
+    </properties>
+    
     <dependencies>
-
-        <!--Akka
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-stream_2.12</artifactId>
-            <version>2.5.31</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http_2.12</artifactId>
-            <version>10.1.12</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http-spray-json</artifactId>
-            <version>3.0.0-RC1</version>
-        </dependency-->
 
         <!--Tests deps-->
         <dependency>
@@ -163,22 +150,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>org.scala-tools</groupId>
-                        <artifactId>maven-scala-plugin</artifactId>
-                        <version>2.15.2</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>compile</goal>
-                                    <goal>testCompile</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <scalaVersion>2.12.8</scalaVersion>
-                        </configuration>
-                    </plugin>
+                    
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
