--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -11,19 +11,15 @@
         <version>1.0</version>
     </parent>
 
+    <name>streamer</name>
+
     <groupId>com.dyptan</groupId>
     <artifactId>streaming</artifactId>
     <packaging>jar</packaging>
     <version>1.1-SNAPSHOT</version>
 
 
-    <properties>
-        <spark.version>2.4.6</spark.version>
-        <scala_ver>2.11</scala_ver>
-    </properties>
-    
     <dependencies>
-
         <!--Tests deps-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,7 +49,7 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_${scala_ver}</artifactId>
+            <artifactId>spark-sql_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
         <dependency>
@@ -63,17 +59,17 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql-kafka-0-10_${scala_ver}</artifactId>
+            <artifactId>spark-sql-kafka-0-10_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb.spark</groupId>
-            <artifactId>mongo-spark-connector_${scala_ver}</artifactId>
-            <version>2.4.0</version>
+            <artifactId>mongo-spark-connector_${scala.version}</artifactId>
+            <version>${spark.mongo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_${scala_ver}</artifactId>
+            <artifactId>spark-mllib_${scala.version}</artifactId>
             <version>${spark.version}</version>
         </dependency>
 
@@ -81,7 +77,7 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch-hadoop</artifactId>
-            <version>6.2.4</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
     </dependencies>
 
