--- a/streamer/src/main/resources/streaming.properties
+++ b/streamer/src/main/resources/streaming.properties
@@ -1,7 +1,4 @@
-spark.master=local
 spark.mongodb.output.uri=mongodb://mongo/olx.cars
-spark.driver.bindAddress=localhost
-
 source.kafka.bootstrap.server=kafka:9092
 source.kafka.topic=olx
-model.load.path=streaming/trainedModel
+model.load.path=trainedModel
