--- a/trainer/pom.xml
+++ b/trainer/pom.xml
@@ -4,48 +4,54 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.dyptan</groupId>
-  <artifactId>trainer</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <name>trainer</name>
 
-  <name>trainer</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+    <parent>
+        <artifactId>parent</artifactId>
+        <groupId>com.dyptan</groupId>
+        <version>1.0</version>
+    </parent>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <scala.version>2.11</scala.version>
-    <akka.version>2.5.20</akka.version>
-    <akka.http.version>10.1.7</akka.http.version>
-  </properties>
+    <groupId>com.dyptan</groupId>
+    <artifactId>trainer</artifactId>
+    <version>1.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
   <dependencies>
+      <dependency>
+          <groupId>com.dyptan</groupId>
+          <artifactId>streaming</artifactId>
+          <version>1.1-SNAPSHOT</version>
+      </dependency>
 
-  <dependency>
-      <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_${scala.version}</artifactId>
-      <version>3.0.5</version>
-      <scope>test</scope>
+    <dependency>
+        <groupId>org.scalatest</groupId>
+        <artifactId>scalatest_${scala.version}</artifactId>
+        <version>3.0.5</version>
+        <scope>test</scope>
     </dependency>
-  <dependency>
-    <groupId>com.dyptan</groupId>
-    <artifactId>streaming</artifactId>
-    <version>1.1-SNAPSHOT</version>
-  </dependency>
+
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13</version>
+        <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-http_${scala.version}</artifactId>
       <version>${akka.http.version}</version>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-http-spray-json_${scala.version}</artifactId>
       <version>${akka.http.version}</version>
       <scope>compile</scope>
     </dependency>
+    
     <dependency>
       <groupId>com.typesafe.akka</groupId>
       <artifactId>akka-stream_${scala.version}</artifactId>
@@ -90,7 +96,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${basedir}/target/ModelTrainer</outputDirectory>
+                                    <outputDirectory>${basedir}/target/ModelTrainer/</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>resources</directory>
