--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,6 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>web</name>
+
     <groupId>com.dyptan</groupId>
     <artifactId>web</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -15,15 +17,18 @@
         <version>1.0</version>
     </parent>
 
-
      <dependencies>
-
         <dependency>
             <groupId>com.dyptan</groupId>
             <artifactId>streaming</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.dyptan</groupId>
+            <artifactId>trainer</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,9 +42,9 @@
         </dependency>
 
         <dependency>
-	<groupId>io.micrometer</groupId>
-	<artifactId>micrometer-registry-prometheus</artifactId>
-    </dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
 
          <dependency>
              <groupId>org.springframework.boot</groupId>
@@ -56,7 +61,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -91,32 +95,26 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.2.6</version>
+            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
-            <version>6.2.4</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>6.2.4</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-client</artifactId>
-            <version>6.2.4</version>
+            <version>${elasticsearch.version}</version>
         </dependency>
-
-        <!-- <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
-        </dependency> -->
 
         <dependency>
             <groupId>io.reactivex</groupId>
@@ -132,7 +130,6 @@
             <groupId>io.reactivex.rxjava2</groupId>
             <artifactId>rxjava</artifactId>
         </dependency>
-
 
     </dependencies>
 
