--- a/streamer/Dockerfile
+++ b/streamer/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jre-slim
-ADD target/StreamTransformer/lib /libs
-ADD target/StreamTransformer/StreamTransformer.jar app.jar
+ADD target/dist/lib /libs
+ADD target/dist/*.jar app.jar
 ENTRYPOINT ["java", "-cp", "/libs/*:app.jar", "com.dyptan.Main"]
