--- a/streamer/src/main/resources/application.properties
+++ b/streamer/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spark.master=local
 spark.mongodb.output.uri=mongodb://mongo/olx.cars
 source.kafka.bootstrap.server=kafka:9092
 source.kafka.topic=olx
-model.load.path=trainedModel
+model.load.path=/model/trainedModel
