--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -16,7 +16,7 @@
     <groupId>com.dyptan</groupId>
     <artifactId>streamer</artifactId>
     <packaging>jar</packaging>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.3-SNAPSHOT</version>
 
 
     <dependencies>
@@ -135,7 +135,7 @@
                                     <goal>copy-resources</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${basedir}/target/StreamTransformer</outputDirectory>
+                                    <outputDirectory>${basedir}/target/dist</outputDirectory>
                                     <resources>
                                         <resource>
                                             <directory>resources</directory>
@@ -158,7 +158,7 @@
                                     <goal>copy-dependencies</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/StreamTransformer/lib</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/dist/lib</outputDirectory>
                                     <overWriteReleases>false</overWriteReleases>
                                     <overWriteSnapshots>false</overWriteSnapshots>
                                     <overWriteIfNewer>true</overWriteIfNewer>
@@ -181,7 +181,7 @@
                                 </manifestEntries>
                             </archive>
 
-                            <finalName>StreamTransformer/StreamTransformer</finalName>
+                            <finalName>dist/StreamTransformer</finalName>
                         </configuration>
                     </plugin>
                 </plugins>
