--- a/trainer/src/main/resources/conf/application.properties
+++ b/trainer/src/main/resources/conf/application.properties
@@ -3,4 +3,8 @@ es.read.field.as.array.include=tags
 es.nodes=elasticsearch
 es.port=9200
 es.resource=olxua/cars
-model.path=trainedModel
+model.path=/model/trainedModel
+
+spark.driver.bindAddress=localhost
+spark.driver.memory=800M
+spark.master=local
