--- a/deploy/k8s/mongo-deployment.yaml
+++ b/deploy/k8s/mongo-deployment.yaml
@@ -20,3 +20,15 @@ spec:
         ports:
         - containerPort: 27017
       restartPolicy: Always
+---
+  apiVersion: v1
+  kind: Service
+  metadata:
+    name: mongo
+  spec:
+    ports:
+    - port: 27017
+      targetPort: 27017
+    selector:
+      name: mongo
+  
