--- a/deploy/k8s/elasticsearch-depl.yml
+++ b/deploy/k8s/elasticsearch-depl.yml
@@ -41,5 +41,17 @@ spec:
       volumes:
        - name: es-storage
          persistentVolumeClaim:
-           claimName: es-claim 
+           claimName: es-pvc 
       restartPolicy: Always
+---
+  apiVersion: v1
+  kind: Service
+  metadata:
+    name: elasticsearch
+  spec:
+    ports:
+    - port: 9200
+      targetPort: 9200
+    selector:
+      name: elasticsearch
+  
