--- a/deploy/k8s/prometheus/values.yml
+++ b/deploy/k8s/prometheus/values.yml
@@ -185,7 +185,7 @@ alertmanager:
     ## alertmanager data Persistent Volume existing claim name
     ## Requires alertmanager.persistentVolume.enabled: true
     ## If defined, PVC must be created manually before volume will be bound
-    existingClaim: "maprfs-pvc-prometheus"
+    existingClaim: "pvc-prometheus"
 
     ## alertmanager data Persistent Volume mount root path
     ##
