--- a/deploy/k8s/streaming-deployment.yaml
+++ b/deploy/k8s/streaming-deployment.yaml
@@ -29,4 +29,4 @@ spec:
       volumes:
         - name: csi
           persistentVolumeClaim:
-            claimName: model-ro-pvc
+            claimName: streamer-ro-pvc
