--- a/deploy/k8s/trainer-pod.yaml
+++ b/deploy/k8s/trainer-pod.yaml
@@ -23,4 +23,15 @@ spec:
   volumes:
     - name: csi
       persistentVolumeClaim:
-        claimName: model-rw-pvc
+        claimName: trainer-rw-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: trainer
+spec:
+  ports:
+  - port: 8081
+    targetPort: 8081
+  selector:
+    name: trainer
