--- a/deploy/k8s/web-deployment.yaml
+++ b/deploy/k8s/web-deployment.yaml
@@ -22,4 +22,18 @@ spec:
         ports:
         - containerPort: 8080
       restartPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: web
+spec:
+  type: NodePort
+  ports:
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30080
+  selector:
+    name: web
+
 
