fixing downloader artifact path

--- a/web/DockerfileAction
+++ b/web/DockerfileAction
@@ -1,4 +1,4 @@
 FROM openjdk:8-jre-slim
-COPY /web-1.4-SNAPSHOT.jar app.jar
+COPY ~/web-1.4-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 EXPOSE 8080
